[package]
name	= "rongbotprime"
version = "0.1.0"
authors = ["ForeverAnApple"]
edition = "2021"

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"

[dependencies.serenity]
version = "0.10.10"
features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["clock"]

[dependencies.sqlx]
git              = "https://github.com/launchbadge/sqlx"
default-features = false
features         = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "bigdecimal", "offline", "migrate"]

# [profile.release]
# lto = true
# codegen-units = 1
# strip = true # Strip is not a stable feature

