[package]
name	= "rongbotprime"
version = "0.1.0"
authors = ["ForeverAnApple"]
edition = "2021"

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"
humantime = "2.1.0"

[dependencies.serenity]
# git = "https://github.com/serenity-rs/serenity"
# branch = "current"
version = "0.11.1"
features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model", "collector", "builder"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["clock"]

[dependencies.sqlx]
git              = "https://github.com/launchbadge/sqlx"
default-features = false
features         = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "bigdecimal", "offline", "migrate"]

# [profile.release]
# lto = true
# codegen-units = 1
# strip = true # Strip is not a stable feature

