[package]
name	= "rongbotprime"
version = "0.3.3"
authors = ["ForeverAnApple"]
edition = "2021"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.3"
humantime = "2.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
futures = "0.3.25"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
# branch = "current"
version = "0.11.5"
features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model", "collector", "builder"]

[dependencies.tokio]
version = "1.22.0"
features = ["macros", "rt-multi-thread"]

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["clock"]

[dependencies.sqlx]
git              = "https://github.com/launchbadge/sqlx"
version          = "0.6.2"
default-features = false
features         = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "bigdecimal", "offline", "migrate"]

[profile.release]
lto = true
strip = true # Strip is not a stable feature
